# serializer version: 1
# name: test_covers[eve_shutter][cover.eve_shutter_switch_20eci1701-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.eve_shutter_switch_20eci1701',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHADE: 'shade'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000094-MatterNodeDevice-1-MatterCoverPositionAwareLift-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[eve_shutter][cover.eve_shutter_switch_20eci1701-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 100,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shade',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Eve Shutter Switch 20ECI1701',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.eve_shutter_switch_20eci1701',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_covers[mock_window_covering_full][cover.mock_full_window_covering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.mock_full_window_covering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.AWNING: 'awning'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 143>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000032-MatterNodeDevice-1-MatterCoverPositionAwareLiftAndTilt-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[mock_window_covering_full][cover.mock_full_window_covering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 100,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 100,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'awning',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Full Window Covering',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 143>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.mock_full_window_covering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_covers[mock_window_covering_lift][cover.mock_lift_window_covering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.mock_lift_window_covering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.AWNING: 'awning'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000033-MatterNodeDevice-1-MatterCover-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[mock_window_covering_lift][cover.mock_lift_window_covering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'awning',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lift Window Covering',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.mock_lift_window_covering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_covers[mock_window_covering_pa_lift][cover.longan_link_wncv_da01-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.longan_link_wncv_da01',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHADE: 'shade'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000027-MatterNodeDevice-1-MatterCoverPositionAwareLift-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[mock_window_covering_pa_lift][cover.longan_link_wncv_da01-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 51,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shade',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Longan link WNCV DA01',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.longan_link_wncv_da01',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_covers[mock_window_covering_pa_tilt][cover.mock_pa_tilt_window_covering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.mock_pa_tilt_window_covering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 139>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000034-MatterNodeDevice-1-MatterCoverPositionAwareTilt-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[mock_window_covering_pa_tilt][cover.mock_pa_tilt_window_covering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 100,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock PA Tilt Window Covering',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 139>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.mock_pa_tilt_window_covering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_covers[mock_window_covering_tilt][cover.mock_tilt_window_covering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.mock_tilt_window_covering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 139>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000035-MatterNodeDevice-1-MatterCover-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[mock_window_covering_tilt][cover.mock_tilt_window_covering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Tilt Window Covering',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 139>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.mock_tilt_window_covering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_covers[zemismart_mt25b][cover.zemismart_mt25b_roller_motor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.zemismart_mt25b_roller_motor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHADE: 'shade'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '00000000000004D2-000000000000007A-MatterNodeDevice-1-MatterCoverPositionAwareLift-258-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[zemismart_mt25b][cover.zemismart_mt25b_roller_motor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shade',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zemismart MT25B Roller Motor',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.zemismart_mt25b_roller_motor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
